Solucionado error ruta blanket.js

--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
     <script src="chai.js"></script>
     <script src="mocha.js"></script>
 
-     <script src="../test/blanket.min.js" data-cover-adapter="../test/mocha-blanket.js" data-cover-flags="debug"></script>
+     <script src="../test/blanket.js" data-cover-adapter="../test/mocha-blanket.js" data-cover-flags="debug"></script>
     <script src="../assets/js/csv.js" data-cover></script>
 
 
