--- a/test/index.html
+++ b/test/index.html
@@ -4,20 +4,20 @@
     <title>Mocha</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../test/mocha.css" />
+    <link rel="stylesheet" media="all" href="../test/mocha.css" />
   </head>
   <body>
     <div id="mocha"></div>
-        <div id="messages"></div>
-        <div id="fixtures"></div>
+    <div id="messages"></div>
+    <div id="fixtures"></div>
 
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="chai.js"></script>
-    <script src="mocha.js"></script>
-
-     <script src="../test/blanket.js" data-cover-adapter="../test/mocha-blanket.js" data-cover-flags="debug"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="../test/chai.js"></script>
+    <script src="../test/mocha.js"></script>
+    <script src="../test/sinon-1.17.2.js"></script>
+    <script src="../test/blanket.js" data-cover-adapter="../test/mocha-blanket.js" data-cover-flags="debug"></script>
+    
     <script src="../assets/js/csv.js" data-cover></script>
-
 
     <script>mocha.setup('bdd');</script>
     <script src="../test/tests.js"></script>
