--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
           </table>
         </div>
         <div id="final">
-          <button type="button">table:</button><br>
+          <button type="button" onclick="crear();">Crear tabla</button><br>
+          <button type="button" onclick="limpiar();">Limpiar tabla</button><br>
           <span class="output" id="finaltable"></span>
         </div>
         
