--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,7 @@
     <script src="../test/sinon-1.17.2.js"></script>
     <script src="../test/blanket.js" data-cover-adapter="../test/mocha-blanket.js" data-cover-flags="debug"></script>
     
-    <script src="../assets/js/csv.js" data-cover></script>
+    <script src="../public/javascripts/csv.js" data-cover></script>
 
     <script>mocha.setup('bdd');</script>
     <script src="../test/tests.js"></script>
