--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" media="all" href="../test/mocha.css" />
+    <script src="../public/javascripts/main.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="mocha"></div>
